2004-03-29  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes2, fortune/datfiles/fortunes2-o.real,
	hack/data, hack/rumors: Update from NetBSD CVS.

2004-03-27  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-03-12  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms, wtf/acronyms.comp: Update from NetBSD CVS.

2004-03-05  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-03-04  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms.comp: Update from NetBSD CVS.

2004-02-28  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes2: Update from NetBSD CVS.

2004-02-18  Joseph S. Myers  <jsm@polyomino.org.uk>

	* wtf/acronyms: Update from NetBSD CVS.

2004-02-14  Joseph S. Myers  <jsm@polyomino.org.uk>

	* fortune/datfiles/fortunes, fortune/datfiles/fortunes.sp.ok,
	rogue/USD.doc/rogue.me: Update from NetBSD CVS.
	* NEWS: Fix typo.
	* ChangeLog: Mark properly for 2.16 release.

2004-02-13  Joseph S. Myers  <jsm@polyomino.org.uk>

	* Version 2.16.

	* NEWS, bsd-games.lsm, bsd-games-non-free.lsm: Update.

	* morse/morse.c: Update from NetBSD CVS.

	* morse/morse.c: Encode and decode more characters.  Don't put
	commas after every character.  Don't encode whitespace as "...".
	Don't fail decoding across a 1024-byte boundary.  Mark end of
	message appropriately.  From OpenBSD but with punctuation taken
	from ITU-T Recommendation F.1 (03/98).
	* tests/morse.testsent, tests/morse.testsentd: New tests.
	* tests/morse.SOS, tests/morse.foo, tests/morse.sos: Update.
	* tests/morse.test: Update.

2004-02-11  Joseph S. Myers  <jsm@polyomino.org.uk>

	* tests/pom.2003fm1, tests/pom.2003fm2, tests/pom.2003fq1,
	tests/pom.2003fq2, tests/pom.2003lq1, tests/pom.2003lq2,
	tests/pom.2003nm1, tests/pom.2003nm2, tests/pom.2003ph1,
	tests/pom.2003ph2, tests/pom.2003ph3, tests/pom.2003ph4,
	tests/pom.2003ph5, tests/pom.2003ph6, tests/pom.2003ph7,