@@ -1,4 +1,6 @@
-/*	$NetBSD: phantstruct.h,v 1.3 1999/09/08 21:17:55 jsm Exp $	*/
+/*	$NetBSD: phantstruct.h,v 1.4 2004/04/07 17:46:47 ross Exp $	*/
+
+#define bool char
 
 /*
  * phantstruct.h - structure definitions for Phantasia
