@@ -1,4 +1,4 @@
-$NetBSD: acronyms,v 1.139 2004/03/26 12:45:39 keihan Exp $
+$NetBSD: acronyms,v 1.140 2004/04/01 04:03:30 jschauma Exp $
 
 AFAIC	as far as I'm concerned
 AFAICR	as far as I can recall
@@ -43,6 +43,7 @@ BTW	by the way
 CMIIW	correct me if I'm wrong
 CNP	continued [in my] next post
 COB	close of business [day]
+COTS	commercial off-the-shelf
 CYA	see you around
 D/L	download
 DIY	do it yourself
