@@ -1,3 +1,11 @@
+2004-04-08  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* mille/move.c, phantasia/fight.c, phantasia/gamesupport.c,
+	phantasia/include.h, phantasia/interplayer.c, phantasia/io.c,
+	phantasia/main.c, phantasia/misc.c, phantasia/phantstruct.h,
+	phantasia/setup.c, worms/worms.c, wtf/acronyms, wtf/acronyms.comp:
+	Update from NetBSD CVS.
+
 2004-03-29  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* fortune/datfiles/fortunes2, fortune/datfiles/fortunes2-o.real,
